C-GrammarV2
input -> stmt_list

stmt_list -> declar stmt_list
stmt_list -> forstmt stmt_list
stmt_list -> whilestmt stmt_list
stmt_list -> ifstmt stmt_list
stmt_list -> PRINTF ( ) ; stmt_list
stmt_list -> IDENT p_stmt_list stmt_list
stmt_list -> SCANF ( ) ; stmt_list
stmt_list -> ''

p_stmt_list -> = expr p_stmt_list_2 ;
p_stmt_list -> ( ) ;
p_stmt_list_2 -> ''
p_stmt_list_2 -> ( ) ;

declar -> type pointer IDENT array p_declar ;
declar -> VOID IDENT declarfn

pointer -> *
pointer -> ''

array -> [ size ]
array -> ''

size -> NUMBER
size -> ''

p_declar -> declarfn
p_declar -> declarvar

declarvar -> , pointer IDENT array declarvar
declarvar -> = value declarvar
declarvar -> ''

value -> = expr
value -> { p_value }

p_value -> expr p_value_2
p_value_2 -> , p_value
p_value_2 -> ''
declarfn -> ( parametros ) p_declarfn

p_declarfn -> ;
p_declarfn -> { p_statement return }

return -> RETURN expr ;

parametros -> type IDENT p_parametros
parametros -> ''
p_parametros -> , parametros
p_parametros -> ''

whilestmt -> WHILE ( condicion ) statement

forstmt -> FOR ( fordeclar ; condicion ; forassign ) statement
fordeclar -> type IDENT = expr
fordeclar -> IDENT = expr
fordeclar -> ''
forassign -> op IDENT op assignOP

ifstmt -> IF ( condicion ) statement elsestmt
elsestmt -> ELSE statement
elsestmt -> ELSEIF ( condicion ) statement elsestmt
elsestmt -> ''

p_elsestmt -> ELSEIF ( condicion ) statement elsestmt
p_elsestmt -> statement

statement -> { p_statement }

p_statement -> forstmt p_statement
p_statement -> type pointer IDENT array declarvar
p_statement -> whilestmt p_statement
p_statement -> ifstmt p_statement
p_statement -> printf ( ) ; p_statement
p_statement -> IDENT p_stmt_list p_statement
p_statement -> scanf ; p_statement
p_statement -> ''

assignOP -> = expr
assignOP -> ''

op -> ++
op -> --
op -> ''

condicion -> expr opcondi expr p_condicion

p_condicion -> && condicion
p_condicion -> || condicion
p_condicion -> ''

opcondi -> ==
opcondi -> > 
opcondi -> <
opcondi -> !=
opcondi -> <=
opcondi -> >=

type -> INT
type -> CHAR
type -> BOOLEAN

expr -> term p_expr
p_expr -> + term p_expr
p_expr -> - term p_expr
p_expr -> ''

term -> factor p_term
p_term -> * factor p_term
p_term -> / factor p_term
p_term -> ''

factor -> IDENT
factor -> NUMBER
factor -> TRUE
factor -> FALSE
factor -> CADENA
factor -> LETRA
factor -> ( expr )
